--- a/social-media-app/src/styles/global.css
+++ b/social-media-app/src/styles/global.css
@@ -7,6 +7,8 @@
 }
 
 .container {
-    margin: 0 30rem;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 0 4.5rem;
 }
