--- a/social-media-app/src/styles/social_media/components/Navbar.module.css
+++ b/social-media-app/src/styles/social_media/components/Navbar.module.css
@@ -48,7 +48,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(240, 240, 240);
-    border-radius: 1rem;
+    border-radius: .5rem;
     padding: .5rem;
     border: none;
     outline: none;
