--- a/social-media-app/src/styles/social_media/components/ThirdProfileSection.module.css
+++ b/social-media-app/src/styles/social_media/components/ThirdProfileSection.module.css
@@ -39,4 +39,5 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(auto-fit, 1fr);
     gap: 1rem;
+    margin-bottom: 2rem;
 }
