--- a/social-media-app/src/styles/social_media/pages/FullscreenPost.module.css
+++ b/social-media-app/src/styles/social_media/pages/FullscreenPost.module.css
@@ -86,6 +86,11 @@
     outline: none;
     padding: 0;
     font-size: 1.4em;
+    cursor: pointer;
+}
+
+.footerButtonLiked {
+    color: rgb(232, 84, 84);
 }
 
 .footerTextContainer {
@@ -118,6 +123,7 @@
     font-size: .9em;
     border: none;
     outline: none;
+    width: 100%;
 }
 
 .footerPostCommentButton {
@@ -127,9 +133,11 @@
     outline: none;
     font-size: .9em;
     transition: color .4s;
-    padding: 0
+    padding: 0;
+    cursor: pointer;
 }
 
 .footerPostCommentButtonDisabled {
     color: rgba(4, 171, 255, 0.427);
+    pointer-events: none;
 }
