--- a/social-media-app/src/styles/social_media/components/Loader.module.css
+++ b/social-media-app/src/styles/social_media/components/Loader.module.css
@@ -1,3 +1,11 @@
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .loader {
     margin: 3rem;
     width: 3.75rem;
@@ -5,7 +13,7 @@
     border-radius: 50%;
     border: .125rem solid rgb(121, 167, 240);
     border-bottom-color: transparent;
-    animation: 1s spin linear infinite
+    animation: 1s spin linear infinite;
 }
 
 @keyframes spin {
